--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Age Gating Form</title>
   </head>
-  <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=RTfyjU'></script>
+  <script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=Rm6LPM'></script>
   <body>
     <h1>Age Gating Form</h1>
   </body>
